--- a/client/app/admin/main.css
+++ b/client/app/admin/main.css
@@ -31,6 +31,10 @@ ol {
     border-bottom: 1px solid #e5e5e5
 }
 
+body a{
+    text-decoration: none;
+}
+
 .header-logo {
     float: left;
     margin-right: 10px;
@@ -38,6 +42,37 @@ ol {
     color: #333;
     white-space: nowrap
 }
+
+a.collapse-menu-link{
+    font-size: 31px;
+    cursor: pointer;
+    display: block;
+    text-decoration: none;
+    line-height: 42px;
+    color: cadetblue;
+    padding: 0;
+    float: left;
+    margin: 11px 0 0 25px;
+
+}
+
+.ion-navicon:before {
+  content: "\F20E"; 
+  }
+
+ .ion-navicon{
+  display: inline-block;
+  font-family: "Ionicons";
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  text-rendering: auto;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; 
+ } 
 
 .header-search {
     float: left;
