ng-bootstrap forms

--- a/client/app/admin/theme/sass/_layout.scss
+++ b/client/app/admin/theme/sass/_layout.scss
@@ -10,3 +10,23 @@ main::before {
     will-change: transform;
     z-index: 0;
 }
+
+::-webkit-input-placeholder {
+    /* WebKit browsers */
+    color: #fff;
+}
+
+:-moz-placeholder {
+    /* Mozilla Firefox 4 to 18 */
+    color: #fff;
+}
+
+::-moz-placeholder {
+    /* Mozilla Firefox 19+ */
+    color: #fff;
+}
+
+:-ms-input-placeholder {
+    /* Internet Explorer 10+ */
+    color: #fff;
+}
