--- a/client/app/admin/theme/components/wmSidebar/sidebar.html
+++ b/client/app/admin/theme/components/wmSidebar/sidebar.html
@@ -1,62 +1,3 @@
 <div class="sidebar">
-    <ul class="sidebar-list">
-        <li class="sidebar-list-item" title="Forms">
-            <a class="sidebar-list-link" href="">
-                <i class="ion-compose"></i>
-                <span>Forms</span>
-            </a>
-            <ul class="sidebar-sublist">
-                <li class="siderbar-sublist-item">
-                    <a routerLink="./forms/standard-fields" class="sidebar-list-link">
-                        <span>standard-fields</span>
-                    </a>
-                </li>
-                <li class="siderbar-sublist-item">
-                    <a routerLink="./forms/validation-states" class="sidebar-list-link">
-                        <span>validation-states</span>
-                    </a>
-                </li>
-                <li class="siderbar-sublist-item">
-                    <a routerLink="./forms/input-groups" class="sidebar-list-link">
-                        <span>input-groups</span>
-                    </a>
-                </li>
-                <li class="siderbar-sublist-item">
-                    <a routerLink="./forms/rating-inputs" class="sidebar-list-link">
-                        <span>rating-inputs</span>
-                    </a>
-                </li>
-                <li class="siderbar-sublist-item">
-                    <a routerLink="./forms/select-inputs" class="sidebar-list-link">
-                        <span>select-inputs</span>
-                    </a>
-                </li>
-                <li class="siderbar-sublist-item">
-                    <a routerLink="./forms/layout-basci-form" class="sidebar-list-link">
-                        <span>layout-basci-form</span>
-                    </a>
-                </li>
-                <li class="siderbar-sublist-item">
-                    <a routerLink="./forms/layout-block-form" class="sidebar-list-link">
-                        <span>layout-block-form</span>
-                    </a>
-                </li>
-                <li class="siderbar-sublist-item">
-                    <a routerLink="./forms/layout-inline-form" class="sidebar-list-link">
-                        <span>layout-inline-form</span>
-                    </a>
-                </li>
-                <li class="siderbar-sublist-item">
-                    <a routerLink="./forms/layout-horizontal-form" class="sidebar-list-link">
-                        <span>layout-horizontal-form</span>
-                    </a>
-                </li>
-                <li class="siderbar-sublist-item">
-                    <a routerLink="./forms/layout-without-lable-form" class="sidebar-list-link">
-                        <span>layout-without-lable-form</span>
-                    </a>
-                </li>
-            </ul>
-        </li>
-    </ul>
+    <wm-menu></wm-menu>
 </div>
