--- a/client/app/admin/theme/sass/_form.scss
+++ b/client/app/admin/theme/sass/_form.scss
@@ -80,3 +80,99 @@
 select.form-control:not([multiple]) option {
     color: #7d7d7d;
 }
+
+label.custom-radio>span {
+    position: relative;
+    display: inline-block;
+    margin: 0;
+    line-height: 16px;
+    font-weight: 300;
+    cursor: pointer;
+    padding-left: 22px;
+    width: 100%;
+}
+
+.input-demo {
+    line-height: 25px;
+}
+
+[type="checkbox"],
+[type="radio"] {
+    box-sizing: border-box;
+    padding: 0;
+}
+
+.col-md-4 {
+    float: left;
+    width: 33.33333%;
+}
+
+label.custom-checkbox>span {
+    display: block;
+    margin-right: 10px;
+}
+
+label.custom-checkbox>input {
+    height: 0;
+    z-index: -100 !important;
+    opacity: 0;
+    position: absolute;
+}
+
+label.custom-radio>input {
+    height: 0;
+    z-index: -100 !important;
+    opacity: 0;
+    position: absolute;
+}
+
+label.custom-radio>span:before {
+    cursor: pointer;
+    font-family: fontAwesome;
+    font-weight: 300;
+    font-size: 12px;
+    color: #fff;
+    content: "\a0";
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 0;
+    display: inline-block;
+    text-align: center;
+    height: 16px;
+    line-height: 14px;
+    min-width: 16px;
+    margin-right: 6px;
+    position: relative;
+    top: 0;
+    margin-left: -22px;
+}
+
+label.custom-radio>span:before {
+    border-radius: 16px;
+    font-size: 9px;
+}
+
+label.custom-radio>input:checked+span:before {
+    content: "\f3ff";
+    font-weight: 300;
+    display: inline-block;
+    font-family: "Ionicons";
+    //    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    color: cornsilk;
+}
+
+label.custom-radio>input:disabled+span {
+    color: rgba(255, 255, 255, 0.4);
+    cursor: not-allowed;
+}
+
+input[type=checkbox]:disabled,
+input[type=radio]:disabled {
+    cursor: not-allowed;
+}
