--- a/client/app/admin/theme/components/wmMenu/wmMenu.html
+++ b/client/app/admin/theme/components/wmMenu/wmMenu.html
@@ -36,6 +36,12 @@
                     <span>checkboxes-radios</span>
                 </a>
             </li>
+
+            <li class="siderbar-sublist-item">
+                <a routerLink="./forms/picture-uploader" class="sidebar-list-link" (click)="toggleSubMenu($event)">
+                    <span>picture-uploader</span>
+                </a>
+            </li>
             <li class="siderbar-sublist-item">
                 <a routerLink="./forms/layout-basci-form" class="sidebar-list-link" (click)="toggleSubMenu($event)">
                     <span>layout-basci-form</span>
