--- a/client/app/admin/admin.css
+++ b/client/app/admin/admin.css
@@ -164,13 +164,104 @@ label.custom-radio > input:checked + span:before {
   -webkit-font-smoothing: antialiased;
   color: cornsilk; }
 
-label.custom-radio > input:disabled + span {
+label.custom-radio > input:disabled + span:before {
   color: rgba(255, 255, 255, 0.4);
+  cursor: not-allowed; }
+
+label.custom-checkbox > input:checked + span:before {
+  content: "\f121";
+  font-weight: 300;
+  display: inline-block;
+  font-family: "Ionicons";
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  color: cornsilk; }
+
+label.custom-checkbox > input:disabled + span:before {
+  border-color: rgba(255, 255, 255, 0.4) !important;
   cursor: not-allowed; }
 
 input[type=checkbox]:disabled,
 input[type=radio]:disabled {
   cursor: not-allowed; }
+
+label.custom-checkbox {
+  padding-right: 0;
+  margin-bottom: 0; }
+
+label.custom-checkbox {
+  margin-bottom: 12px; }
+
+label.custom-checkbox > input {
+  height: 0;
+  z-index: -100 !important;
+  opacity: 0;
+  position: absolute; }
+
+label.custom-checkbox > span {
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  line-height: 16px;
+  font-weight: 300;
+  cursor: pointer;
+  padding-left: 22px;
+  width: 100%; }
+
+label.custom-checkbox > span {
+  display: block;
+  margin-right: 10px; }
+
+label.custom-checkbox > span:before {
+  cursor: pointer;
+  font-family: fontAwesome;
+  font-weight: 300;
+  font-size: 12px;
+  color: #fff;
+  content: "\a0";
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 0;
+  display: inline-block;
+  text-align: center;
+  height: 16px;
+  line-height: 14px;
+  min-width: 16px;
+  margin-right: 6px;
+  position: relative;
+  top: 0;
+  margin-left: -22px; }
+
+.has-success label.custom-checkbox > span:before {
+  color: #a2db59 !important; }
+
+.has-success label.custom-checkbox > span {
+  color: #a2db59; }
+
+.has-warning label.custom-checkbox > span:before {
+  color: #ecc839 !important; }
+
+.has-warning label.custom-checkbox > span {
+  color: #ecc839; }
+
+.has-error label.custom-checkbox > span:before {
+  color: #fa758e !important; }
+
+.has-error label.custom-checkbox > span {
+  color: #fa758e; }
+
+.offset-sm-2 {
+  margin-left: 16.66667%; }
+
+.form-inline .form-group input {
+  width: 100%; }
+
+.checkbox-block label.custom-checkbox {
+  margin-bottom: 0px; }
 
 /*!
   Ionicons, v2.0.1
