--- a/client/app/admin/theme/components/wmMenu/wmMenu.html
+++ b/client/app/admin/theme/components/wmMenu/wmMenu.html
@@ -43,6 +43,12 @@
                 </a>
             </li>
             <li class="siderbar-sublist-item">
+                <a routerLink="./forms/ckeditor" class="sidebar-list-link" (click)="toggleSubMenu($event)">
+                    <span>ckeditor</span>
+                </a>
+            </li>
+
+            <li class="siderbar-sublist-item">
                 <a routerLink="./forms/layout-basci-form" class="sidebar-list-link" (click)="toggleSubMenu($event)">
                     <span>layout-basci-form</span>
                 </a>
