--- a/client/app/admin/theme/theme.scss
+++ b/client/app/admin/theme/theme.scss
@@ -1,4 +1,8 @@
+//theme config
+@import "sass/conf/conf";
+//component
 @import "sass/layout";
 @import "sass/form";
+@import "sass/tables";
 //icons
 @import "sass/ionicons"
