--- a/client/app/admin/admin.css
+++ b/client/app/admin/admin.css
@@ -11,21 +11,17 @@ main::before {
   will-change: transform;
   z-index: 0; }
 
-::-webkit-input-placeholder {
-  /* WebKit browsers */
-  color: #fff; }
-
-:-moz-placeholder {
-  /* Mozilla Firefox 4 to 18 */
-  color: #fff; }
-
 ::-moz-placeholder {
-  /* Mozilla Firefox 19+ */
-  color: #fff; }
+  color: #fff !important; }
+
+::-webkit-input-placeholder {
+  color: #fff !important; }
 
 :-ms-input-placeholder {
-  /* Internet Explorer 10+ */
-  color: #fff; }
+  color: #fff !important; }
+
+.align-right {
+  text-align: right; }
 
 .form-control {
   color: #fff;
@@ -262,6 +258,334 @@ label.custom-checkbox > span:before {
 
 .checkbox-block label.custom-checkbox {
   margin-bottom: 0px; }
+
+/* 
+smart table
+*/
+.ng2-smart-table-container table {
+  color: #ffffff; }
+  .ng2-smart-table-container table th,
+  .ng2-smart-table-container table td {
+    border: 1px solid rgba(255, 255, 255, 0.3) !important;
+    line-height: 35px;
+    vertical-align: middle; }
+  .ng2-smart-table-container table input {
+    line-height: 1.5 !important; }
+  .ng2-smart-table-container table tbody tr:hover {
+    background: rgba(0, 0, 0, 0.03); }
+  .ng2-smart-table-container table a.ng2-smart-sort-link {
+    font-size: 14px !important;
+    color: #ffffff;
+    font-weight: 500; }
+    .ng2-smart-table-container table a.ng2-smart-sort-link.sort {
+      font-weight: 500 !important; }
+      .ng2-smart-table-container table a.ng2-smart-sort-link.sort::after {
+        border-bottom-color: #ffffff !important; }
+  .ng2-smart-table-container table .ng2-smart-actions {
+    width: 70px;
+    text-align: center; }
+    .ng2-smart-table-container table .ng2-smart-actions .actions {
+      float: none;
+      text-align: center; }
+  .ng2-smart-table-container table a.ng2-smart-action {
+    font-size: 14px !important;
+    color: #ffffff;
+    padding: 0 5px;
+    display: inline-block; }
+    .ng2-smart-table-container table a.ng2-smart-action.ng2-smart-action-add-add {
+      font-size: 25px !important; }
+  .ng2-smart-table-container table div {
+    color: #ffffff; }
+  .ng2-smart-table-container table input {
+    color: #ffffff; }
+
+nav.ng2-smart-pagination-nav {
+  display: flex;
+  justify-content: center; }
+
+.table {
+  color: #ffffff;
+  margin-bottom: 0px; }
+  .table > thead > tr > th {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    white-space: nowrap; }
+    .table > thead > tr > th:first-child {
+      text-align: center; }
+    .table > thead > tr > th:last-child {
+      padding-right: 16px; }
+  .table > tbody > tr > tr:first-child {
+    padding-top: 1px; }
+  .table > tbody > tr > td {
+    padding: 0px 8px;
+    line-height: 35px;
+    border-top: 1px solid rgba(255, 255, 255, 0.3); }
+    .table > tbody > tr > td:first-child {
+      text-align: center; }
+    .table > tbody > tr > td:last-child {
+      padding-right: 16px !important; }
+
+.table-id {
+  text-align: left !important;
+  width: 40px; }
+
+.table-arr {
+  width: 5px;
+  padding: 10px 8px 8px 0 !important; }
+
+.table-no-borders {
+  border: none; }
+  .table-no-borders td,
+  .table-no-borders th,
+  .table-no-borders tr {
+    border: none !important; }
+
+.editable-wrap .btn-group.form-control {
+  background-color: transparent; }
+
+.editable-tr-wrap .editable-wrap {
+  vertical-align: super; }
+
+.editable-tr-wrap .editable-controls input.editable-input {
+  width: 110px; }
+
+.editable-tr-wrap td {
+  width: 20%; }
+
+.editable-table-button {
+  width: 70px; }
+
+.add-row-editable-table {
+  margin-bottom: 10px; }
+
+.add-row-editable-table + table {
+  margin-bottom: 5px; }
+
+.select-page-size-wrap {
+  width: 150px; }
+
+.table .header-row th {
+  vertical-align: middle;
+  padding: 0 8px; }
+
+tr.editable-row input.form-control {
+  vertical-align: middle; }
+
+.select-td .editable-select {
+  margin-bottom: 1px; }
+
+@media screen and (max-width: 1199px) {
+  .editable-tr-wrap .editable-wrap {
+    vertical-align: middle; } }
+
+.browser-icons {
+  width: 41px; }
+
+.st-sort-ascent,
+.st-sort-descent {
+  position: relative; }
+
+.st-sort-ascent:after,
+.st-sort-descent:after {
+  width: 0;
+  height: 0;
+  border-bottom: 4px solid #ffffff;
+  border-top: 4px solid transparent;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  margin-bottom: 2px; }
+
+.st-sort-descent:after {
+  transform: rotate(-180deg);
+  margin-bottom: -2px; }
+
+.sortable th {
+  cursor: pointer; }
+  .sortable th:after {
+    content: '';
+    display: inline-block;
+    width: 8px;
+    margin-left: 8px; }
+
+a.email-link {
+  color: #ffffff; }
+  a.email-link:hover {
+    color: #f95372; }
+
+input.search-input {
+  margin-left: -8px;
+  padding-left: 8px; }
+
+.table .pagination {
+  margin: 4px 0 -12px 0; }
+  .table .pagination a {
+    cursor: pointer; }
+
+.vertical-scroll {
+  max-height: 214px; }
+
+.pagination > li > a,
+.pagination > li > span {
+  background: transparent; }
+
+.pagination > li:first-child > a,
+.pagination > li:first-child > span {
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px; }
+
+.pagination > li:last-child > a,
+.pagination > li:last-child > span {
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px; }
+
+.status-button {
+  width: 60px; }
+
+.table .editable-wrap .editable-controls,
+.table .editable-wrap .editable-error {
+  vertical-align: sub; }
+  .table .editable-wrap .editable-controls .btn,
+  .table .editable-wrap .editable-error .btn {
+    padding: 3px 8px; }
+    .table .editable-wrap .editable-controls .btn.dropdown-toggle,
+    .table .editable-wrap .editable-error .btn.dropdown-toggle {
+      padding: 3px 20px;
+      margin-top: 3px; }
+  .table .editable-wrap .editable-controls input,
+  .table .editable-wrap .editable-error input {
+    line-height: 1px;
+    height: 30px; }
+
+.form-inline button[type="submit"].editable-table-button {
+  margin-left: 0; }
+
+.table > thead > tr > th {
+  border-bottom: none; }
+
+.table > tbody > tr.no-top-border:first-child > td {
+  border-top: none; }
+
+.black-muted-bg {
+  background-color: rgba(0, 0, 0, 0.1); }
+
+.table-hover > tbody > tr:hover {
+  background-color: rgba(0, 0, 0, 0.1); }
+
+.table-bordered,
+.table-bordered > thead > tr > th,
+.table-bordered > tbody > tr > th,
+.table-bordered > tfoot > tr > th,
+.table-bordered > thead > tr > td,
+.table-bordered > tbody > tr > td,
+.table-bordered > tfoot > tr > td {
+  border: 1px solid rgba(255, 255, 255, 0.3); }
+
+.table-striped > tbody > tr:nth-of-type(odd) {
+  background-color: rgba(0, 0, 0, 0.1); }
+
+.table > tbody > tr.primary > td {
+  background-color: rgba(0, 171, 255, 0.7);
+  color: #ffffff;
+  border: none; }
+  .table > tbody > tr.primary > td a.email-link {
+    color: #ffffff; }
+    .table > tbody > tr.primary > td a.email-link:hover {
+      color: #f95372; }
+
+.table > tbody > tr.success > td {
+  background-color: rgba(139, 210, 47, 0.7);
+  color: #ffffff;
+  border: none; }
+  .table > tbody > tr.success > td a.email-link {
+    color: #ffffff; }
+    .table > tbody > tr.success > td a.email-link:hover {
+      color: #f95372; }
+
+.table > tbody > tr.warning > td {
+  background-color: rgba(231, 186, 8, 0.7);
+  color: #ffffff;
+  border: none; }
+  .table > tbody > tr.warning > td a.email-link {
+    color: #ffffff; }
+    .table > tbody > tr.warning > td a.email-link:hover {
+      color: #f95372; }
+
+.table > tbody > tr.danger > td {
+  background-color: rgba(249, 83, 114, 0.7);
+  color: #ffffff;
+  border: none; }
+  .table > tbody > tr.danger > td a.email-link {
+    color: #ffffff; }
+    .table > tbody > tr.danger > td a.email-link:hover {
+      color: #f95372; }
+
+.table > tbody > tr.info > td {
+  background-color: rgba(64, 218, 241, 0.7);
+  color: #ffffff;
+  border: none; }
+  .table > tbody > tr.info > td a.email-link {
+    color: #ffffff; }
+    .table > tbody > tr.info > td a.email-link:hover {
+      color: #f95372; }
+
+.editable-click,
+a.editable-click {
+  color: #ffffff;
+  border-bottom: dashed 1px rgba(255, 255, 255, 0.5); }
+
+th {
+  font-weight: 400; }
+
+.editable-empty {
+  color: shade(#f95372, 15%); }
+
+.table > tbody > tr > th {
+  border: none; }
+
+.table-striped > tbody > tr > td {
+  border: none; }
+
+.pagination > li > a,
+.pagination > li > span {
+  color: #ffffff;
+  border-color: rgba(255, 255, 255, 0.5); }
+
+.pagination > li:first-of-type > a,
+.pagination > li:first-of-type > span {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px; }
+
+.pagination > li:last-of-type > a,
+.pagination > li:last-of-type > span {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px; }
+
+.pagination > .active > a,
+.pagination > .active > span,
+.pagination > .active > a:hover,
+.pagination > .active > span:hover,
+.pagination > .active > a:focus,
+.pagination > .active > span:focus {
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border-color: rgba(255, 255, 255, 0.5) !important; }
+
+.pagination > li > a:hover,
+.pagination > li > span:hover,
+.pagination > li > a:focus,
+.pagination > li > span:focus {
+  background-color: rgba(0, 0, 0, 0.2);
+  color: #ffffff; }
+
+.page-item.disabled .page-link,
+.page-item.disabled .page-link:focus,
+.page-item.disabled .page-link:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #ffffff; }
+
+.editable-buttons .btn-with-icon i {
+  margin-right: 0; }
+
+.table-responsive {
+  margin-top: 10px; }
 
 /*!
   Ionicons, v2.0.1
